# artel-worlds

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.alibi  Dockerfile.herald  Dockerfile.phalanx  Dockerfile.pitch  Dockerfile.verglas  Dockerfile.vibequest  Dockerfile.watchtower  README.md  fly-alibi.toml  fly-herald.toml  fly-phalanx.toml  fly-pitch.toml  fly-verglas.toml  fly-vibequest.toml  fly-watchtower.toml  fly.toml  measure_ds.py  pressure_probe.py  pyproject.toml  tune.py  verify_gossip.py
alibi/: artel.py  autonomy.py  brain.py  engine.py  llm.py  meeting.py  server.py
automata/: config.py  genome.py  hub.py  llm.py  physics.py  server.py  world.py
docs/: tank-arena-spec.md
herald/: __init__.py  __main__.py  artel.py  engine.py  llm.py  server.py
llmrouter/: __init__.py  models.py  router.py
mole/: engine.py
phalanx/: agent.py  arena.py  config.py  control.py  sdkchat.py  server.py  tank.py
pitch/: artel_client.py  bot.py  commander.py  config.py  dist.py  engine.py  gossip.py  llm.py  plays.py  server.py  sim.py  tournament.py
static/: index.html
tests/: test_automata_dispatch.py  test_hub.py  test_phalanx.py  test_pitch.py  test_smoke.py  test_verglas.py  test_watchtower.py
tools/: ab.py  ab_llm.py  alibi_ab.py  capture_thumb.py  mole_ab.py  play_demo.py  play_scenario.py  render.py  setpiece_ab.py  verglas_ab.py  verify_integration_render.py  verify_playcall.py
verglas/: __init__.py  artel.py  autonomy.py  engine.py  llm.py  meeting.py  server.py
vibequest/: __init__.py  __main__.py  artel.py  engine.py  llm.py  server.py  world.py
watchtower/: agent.py  config.py  faults.py  incidents.py  (+5 more)
(+22 files in other folders)
