[project]
name = "artel-worlds"
version = "0.1.0"
description = "A platform for living agent worlds. World #1: an evolutionary survival game where AI agents coordinate via Artel to survive."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["automata", "phalanx"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
